// Copyright (c) yoshioyocchi314@gmail.com
// Licensed under the MIT License.

namespace Zrushy.Core.Domain.Events.Entity
{
    public interface ICondition : IEvent
    {
    }
}
